refactor(workflow): enhance execution logging and resource management
- Improve logging methods to support flow and node execution with updated resource
  handling.
- Streamline the execution context conversion process with reduced text column sizes.
- Update FlowExecution to manage resources effectively.
- Enable execution readers to fetch flow executions with related resources.
- Enhance the SSE emitter for consistent event stream handling.